# sns_to_slack-rs

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
deploy/lambda/: Dockerfile  build.dockerfile
src/: lib.rs  main.rs
src/slack/: client.rs  config.rs  message.rs  mod.rs
